--- a/application/admin/view/admin/product_add.html
+++ b/application/admin/view/admin/product_add.html
@@ -34,6 +34,15 @@
         </div>
         <div class="layui-form-item">
             <label for="abbreviation" class="layui-form-label">
+                             展示名称
+            </label>
+            <div class="layui-input-inline"  >
+                <input type="text" id="desc_name" name="abbreviation" required="" lay-verify="desc_name"
+                       autocomplete="off" class="layui-input" >
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label for="abbreviation" class="layui-form-label">
                      缩写
             </label>
             <div class="layui-input-inline"  >
