--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -95,11 +95,15 @@
 		<i class="fa fa-home fa-lg move mr5"></i><a href="../index.htm"         class="">首页 </a>&gt; 注册账户	</div>
 	<div class="login_step">
 		<ul class="order clear">
-			<li><i class="fa fa-circle  fz_40 move"><span>1</span></i> 用户注册				<div class="order_line"></div>
+			<li><i class="fa fa-circle  fz_40 move"><span>1</span></i> 用户注册	<div class="order_line"></div>
 			</li>
-			<li><i class="fa fa-circle  fz_40"><span>2</span></i>实名认证				<div class="order_line"></div>
+			<li>
+                <i class="fa fa-circle  fz_40"><span>2</span></i>实名认证<div class="order_line"></div>
 			</li>
-			<li><i class="fa fa-circle  fz_40"><span>3</span></i>成功</li>
+            <li>
+                <i class="fa fa-circle  fz_40"><span>3</span></i>绑定银行卡<div class="order_line"></div>
+			</li>
+			<li><i class="fa fa-circle  fz_40"><span>4</span></i>成功</li>
 		</ul>
 	</div>
 	<div class="reg_box ">
