--- a/application/admin/view/admin/product_edit.html
+++ b/application/admin/view/admin/product_edit.html
@@ -36,6 +36,15 @@
 
         <div class="layui-form-item">
             <label for="abbreviation" class="layui-form-label">
+                      展示名称
+            </label>
+            <div class="layui-input-inline"  >
+                <input type="text" id="desc_name" name="abbreviation" required="" lay-verify="abbreviation"
+                       autocomplete="off" class="layui-input" value="{$info.desc_name}">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label for="abbreviation" class="layui-form-label">
                 缩写
             </label>
             <div class="layui-input-inline"  >
