--- a/application/admin/view/money/recharge_list.html
+++ b/application/admin/view/money/recharge_list.html
@@ -36,11 +36,10 @@
         <form class="layui-form layui-col-md12 x-so">
             <input class="layui-input" placeholder="开始日" name="start" id="start" value="{:input('get.start')}" autocomplete="off">
             <input class="layui-input" placeholder="截止日" name="end" id="end" value="{:input('get.end')}" autocomplete="off">
-            <input type="text" name="pay_sn"  placeholder="单号" autocomplete="off" class="layui-input" value="{:input('get.pay_sn')}">
+            <input type="text" name="pay_sn"  placeholder="单号" autocomplete="off" class="layui-input" value="{:input('get.order_sn')}">
             <input type="text" name="username"  placeholder="会员账号" autocomplete="off" class="layui-input" value="{:input('get.username')}">
             <input type="text" name="agent_name"  placeholder="代理账号" autocomplete="off" class="layui-input" value="{:input('get.agent_name')}">
-            <!--<input type="text" name="p_agent_id"  placeholder="查询代理直属" autocomplete="off" class="layui-input" value="{:input('get.p_agent_id')}">-->
-            <!--<input type="text" name="all_agent"  placeholder="查询代理全部" autocomplete="off" class="layui-input" value="{:input('get.all_agent')}">-->
+
             <div class="layui-input-inline">
                 <select name="status">
                     <option value="">状态</option>
@@ -51,8 +50,10 @@
             <div class="layui-input-inline">
                 <select name="type">
                     <option value="">支付类型</option>
-                    <option {if condition="input('get.type') eq 1"} selected="selected"{/if} value="1">支付一</option>
-                    <option {if condition="input('get.type') eq 2"} selected="selected"{/if} value="2">支付二</option>
+                    <option {if condition="input('get.type') eq 5001"} selected="selected"{/if} value="5001">微信扫码</option>
+                    <option {if condition="input('get.type') eq 2004"} selected="selected"{/if} value="2004">支付宝扫码</option>
+                    <option {if condition="input('get.type') eq 'QWJ_QUICK'"} selected="selected"{/if} value="QWJ_QUICK">快捷支付</option>
+                    <option {if condition="input('get.type') eq 7001"} selected="selected"{/if} value="7001">网银支付</option>
                 </select>
             </div>
             <div class="layui-input-inline">
@@ -83,7 +84,6 @@
     <table class="layui-table">
         <thead>
         <tr>
-            <th>ID</th>
             <th>单号</th>
             <th>账号</th>
             <th>代理</th>
@@ -97,8 +97,7 @@
         <tbody>
         {volist name="list" id="vo" empty="暂时没有数据" }
         <tr>
-            <td>{$vo.pay_id}</td>
-            <td>{$vo.pay_sn}</td>
+            <td>{$vo.order_sn}</td>
             <td>{$vo.username}</td>
             <td>{$vo.agent_name}</td>
             <td>{$vo.money|number_format=###,2,'.',''}</td>
