--- a/application/admin/view/admin/product_edit.html
+++ b/application/admin/view/admin/product_edit.html
@@ -39,7 +39,7 @@
                       展示名称
             </label>
             <div class="layui-input-inline"  >
-                <input type="text" id="desc_name" name="abbreviation" required="" lay-verify="abbreviation"
+                <input type="text" id="desc_name" name="desc_name" required="" lay-verify="desc_name"
                        autocomplete="off" class="layui-input" value="{$info.desc_name}">
             </div>
         </div>
