--- a/application/index/view/trade/index.html
+++ b/application/index/view/trade/index.html
@@ -751,10 +751,11 @@
 </div>
 <script>
 
+    var myChart = echarts.init(document.getElementById('main'));
 	function setCandlestick(coinType,gap,count){
 
         function setOnUi(dataFromApi){
-            var myChart = echarts.init(document.getElementById('main'));
+            //var myChart = echarts.init(document.getElementById('main'));
 
             Date.prototype.format = function(fmt) {
              var o = {
@@ -842,7 +843,7 @@
 							relVal += '<br><span style="display:inline-block;margin-right:5px;border-radius:10px;width:10px;height:10px;background-color:#0CF49B;"></span>' + params[i].seriesName + ': ';
 
 							if (params[i].seriesType == "candlestick") {
-								relVal += kStyle + 'open: ' + params[i].data[1] + kStyle + 'close: ' + params[i].data[2] + kStyle + 'lowest: ' + params[i].data[3] + kStyle + 'highest: ' + params[i].data[4];
+								relVal += kStyle + '开: ' + params[i].data[1] + kStyle + '收: ' + params[i].data[2] + kStyle + '低: ' + params[i].data[3] + kStyle + '高: ' + params[i].data[4];
 							} else {
 								var d = params[i].data;
 								if(parseFloat(d).toString() =="NaN"){
@@ -915,7 +916,7 @@
                 animation: false,
                 series: [{
                     type: 'candlestick',
-                    name: '日K',
+                    name: 'K线',
                     data: data,
                     itemStyle: {
                         normal: {
@@ -924,9 +925,15 @@
                             borderColor: '#FD1050',
                             borderColor0: '#0CF49B'
                         }
-                    }
-                }/*,
-                    {
+                    },
+					markLine: {
+						data: [{
+							   yAxis: valueToday.close
+							}
+						]
+					}
+                },
+                  {
                         name: 'MA5',
                         type: 'line',
                         data: calculateMA(5, data),
@@ -937,7 +944,7 @@
                                 width: 1
                             }
                         }
-                    },
+                    }/*,
                     {
                         name: 'MA10',
                         type: 'line',
@@ -1379,6 +1386,10 @@
                         if(k==active_name){
                             //计算止盈止损
                             count_wave(new_price);
+							var opt = myChart.getOption();
+							opt.series[0].markLine.data[0].yAxis = new_price;
+							myChart.clear();
+							myChart.setOption(opt);
                         }
                         //计算涨幅跌幅
                         countRange(new_price,k);
