--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -290,7 +290,7 @@
 
                 </ul>
                 <ul>
-                    <li>杠杆比例:&nbsp;&nbsp;{$info.lever}/1</li>
+                    <li>杠杆比例:&nbsp;&nbsp;{$info.lever|number_format=###,0,'.',''}/1</li>
                     <li>上次登陆时间:&nbsp;&nbsp;{$info.last_login_time}</li>
                     <li>上次登陆IP:&nbsp;&nbsp;{$info.last_login_ip}</li>
                 </ul>
