--- a/application/admin/view/admin/product_add.html
+++ b/application/admin/view/admin/product_add.html
@@ -67,7 +67,7 @@
         </div>
         <div class="layui-form-item">
             <label for="contract" class="layui-form-label">
-                    合约比例
+                    交易单位
             </label>
             <div class="layui-input-inline"  >
                 <input type="number" id="contract" name="contract" required="" lay-verify="number"
