--- a/application/admin/view/admin/product_list.html
+++ b/application/admin/view/admin/product_list.html
@@ -51,7 +51,7 @@
             <th>名称</th>
             <th>缩写</th>
             <th>当前价格</th>
-            <th>合约比例</th>
+            <th>交易单位</th>
             <th>最小手数</th>
             <th>最大手数</th>
             <th>手续费</th>
