--- a/application/admin/view/order/keep_order_list.html
+++ b/application/admin/view/order/keep_order_list.html
@@ -90,7 +90,7 @@
             <th>买入价</th>
             <th>当前价格</th>
               <th>方向</th>
-              <th>合约比例</th>
+              <th>交易单位</th>
               <th>手数</th>
               <th>手续费</th>
               <th>盈利金额</th>
