--- a/application/admin/view/order/order_info.html
+++ b/application/admin/view/order/order_info.html
@@ -77,7 +77,7 @@
         </div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">合约比例</label>
+        <label class="layui-form-label">交易单位</label>
         <div class="layui-input-inline">
             <input type="text" class="layui-input" value="{$info.contract|number_format=###,3,'.',''}" disabled>
         </div>
