--- a/application/index/view/user/order_list.html
+++ b/application/index/view/user/order_list.html
@@ -200,7 +200,7 @@
                         <th>建仓价</th>
                         <th>平仓价</th>
                         <th>手数</th>
-                        <!--<th>合约比例</th>-->
+                        <!--<th>交易单位</th>-->
                         <th>保证金</th>
                         <th>手续费</th>
                         <th>止盈</th>
