--- a/application/index/view/trade/index.html
+++ b/application/index/view/trade/index.html
@@ -1207,7 +1207,7 @@
             $(this).children('.profit').text(math_floor(amount)).attr("style","color:"+color+";");
             $(this).children('.now_price').attr("style","color:"+color+";");
         });
-        handle_money(all-last_money,0);
+//        handle_money(all-last_money,0);
         last_money=all;
     }
     //计算止盈止损
