--- a/application/agent/view/withdraw/withdraw_list.html
+++ b/application/agent/view/withdraw/withdraw_list.html
@@ -73,6 +73,8 @@
         <tr>
             <th>ID</th>
             <th>金额</th>
+            <th>费率</th>
+            <th>到账金额</th>
             <th>姓名</th>
             <th>电话</th>
             <th>开户行</th>
@@ -89,6 +91,8 @@
         <tr>
             <td>{$vo.id}</td>
             <td>{$vo.money|number_format=###,2,'.',''}</td>
+            <td>{$vo.rate}</td>
+            <td>{$vo.real_money|number_format=###,2,'.',''}</td>
             <td>{$vo.name}</td>
             <td>{$vo.phone}</td>
             <td>{$vo.bank_name}</td>
