--- a/application/index/view/user/withdraw_list.html
+++ b/application/index/view/user/withdraw_list.html
@@ -197,6 +197,8 @@
                     <tr>
                         <th>ID</th>
                         <th>金额</th>
+                        <th>费率</th>
+                        <th>到账金额</th>
                         <!--<th>姓名</th>-->
                         <!--<th>电话</th>-->
                         <th>开户行</th>
@@ -213,6 +215,8 @@
                     <tr>
                         <td>{$vo.id}</td>
                         <td>{$vo.money|number_format=###,2,'.',''}</td>
+                        <td>{$vo.rate}</td>
+                        <td>{$vo.real_money|number_format=###,2,'.',''}</td>
                         <!--<td>{$vo.name}</td>-->
                         <!--<td>{$vo.phone}</td>-->
                         <td>{$vo.bank_name}</td>
